[project]
name = "fastanime"
version = "2.6.6"
description = "A browser anime site experience from the terminal"
license = "UNLICENSE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "mpv>=1.0.7",
    "plyer>=2.1.0",
    "rich>=13.9.2",
    "yt-dlp>=2024.10.7",
]

[project.scripts]
fastanime = 'fastanime:FastAnime'
